# EuroGet_Public

./: .breakpoints  .gitlab-ci.yml  Makefile  README.md  railway.toml
Backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
Backend/src/: lifespan.py
Backend/src/common/: cached_tokens_service.py  date_utils.py  factories.py  http_utils.py  tables.py
Backend/src/gocardless/: client.py  tables.py
Backend/src/gocardless/bank_connect/tests/: test_process_bank_connection.py  test_process_bank_connections.py
Backend/src/gocardless/payments/: handlers.py  services.py
Backend/src/gocardless/payments/tests/: conftest.py  test_accept_webhook.py  test_calculate_payday_loan_payment.py  test_cancel_payment.py  test_check_mandate.py  test_create_bank_account.py  test_create_mandate.py  test_get_client.py  test_get_first_mandate.py  test_process_payday_loan_payment.py
Backend/src/gocardless/search/tests/: conftest.py  test_get_institutions_for_user.py  test_get_institutiuons.py
Backend/src/gocardless/tests/: conftest.py  test_base_service.py  test_client.py
Backend/src/kyc/: constants.py
Backend/src/kyc/tests/: test_clarify_rejection.py  test_create_kyc_link.py  test_reset_applicant.py
Backend/src/loans/: constants.py
Backend/src/loans/credit_decision/: handlers.py  services.py
Backend/src/loans/credit_limits/: handlers.py
Backend/src/loans/loan_management/: handlers.py
Backend/src/migrations/: env.py
Backend/src/migrations/versions/: 2024-01-10_initial_4bc258fb6d17.py  2024-01-14_failed_payments_api_tokens_77a728336173.py
Backend/src/overdraft_protection/: handlers.py  tables.py
Backend/src/revolut/: services.py  tables.py
Backend/src/users/account_info/: constants.py
Backend/src/users/auth/tests/: conftest.py  test_me.py  test_verify_otp.py
Frontend/: README.md  pubspec.yaml
Frontend/ios/: Podfile
Frontend/lib/: app_state.dart  index.dart  main.dart
Frontend/test/: widget_test.dart
Frontend/web/: index.html
src/: db.py  healthcheck.py  main.py  settings.py
(+257 files in other folders)
